--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/FanMemeCoin/FanMeme/issues"
   },
-  "homepage": "https://github.com/FanMemeCoin/FanMeme#readme"
+  "homepage": "https://github.com/FanMemeCoin/FanMeme#readme",
+  "devDependencies": {
+    "hardhat": "^2.17.1"
+  }
 }
