--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/FanMemeCoin/FanMeme/issues"
   },
-  "homepage": "https://github.com/FanMemeCoin/FanMeme#readme",
+  "homepage": "https://www.fanmeme.online",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "hardhat": "^2.17.1"
