--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
     "dotenv": "^16.3.1"
+  },
+  "directories": {
+    "test": "test"
   }
 }
